--- a/form.html
+++ b/form.html
@@ -171,7 +171,7 @@ a {
     <h1>Register</h1>
     <p>Please fill in your details</p>
     <hr>
-
+<!--========getting user data=========-->
     <label for="name"><b>Name</b></label>
     <input type="text" placeholder="Enter Name" name="Name" required>
 
@@ -186,7 +186,7 @@ a {
           <p>
              &nbsp;&nbsp;
              <select id = "myList" name="College">
-               <option value = "Sir MVIT">Sir M Visvesvaraya Intitutre of Technology</option>
+               <option value = "Sir MVIT">Sir M Visvesvaraya Institute of Technology</option>
                <option value = "NMIT">NMIT</option>
                <option value = "RVCE">RVCE</option>
                <option value = "BMSCE">BMSCE</option>
